# ui_app/OpenApiSpecification/OpenApiSpecigication.json
@@ -31,6 +31,58 @@
     }
   ],
   "paths": {
+    "/cars": {
+      "get": {
+        "tags": [
+          "car"
+        ],
+        "operationId": "getAllCars",
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/CarResponse"
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "car"
+        ],
+        "operationId": "addCar",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/CarRequest"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "integer",
+                  "format": "int32"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/auth/register": {
       "post": {
         "tags": [
@@ -224,6 +276,30 @@
   },
   "components": {
     "schemas": {
+      "CarRequest": {
+        "required": [
+          "description",
+          "name"
+        ],
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "name": {
+            "type": "string"
+          },
+          "description": {
+            "type": "string"
+          },
+          "year": {
+            "minimum": 1900,
+            "type": "integer",
+            "format": "int32"
+          }
+        }
+      },
       "RegistrationRequest": {
         "required": [
           "email",
@@ -260,8 +336,6 @@
             "type": "string"
           },
           "password": {
-            "maxLength": 2147483647,
-            "minLength": 8,
             "type": "string"
           }
         }
@@ -286,6 +360,24 @@
             "type": "string"
           },
           "confirmNewPassword": {
+            "type": "string"
+          }
+        }
+      },
+      "CarResponse": {
+        "type": "object",
+        "properties": {
+          "car": {
+            "type": "string"
+          },
+          "ownerFullName": {
+            "type": "string"
+          },
+          "prodYear": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "description": {
             "type": "string"
           }
         }
