# ui_app/src/app/services/models/car-request.ts
@@ -1,0 +1,10 @@
+/* tslint:disable */
+/* eslint-disable */
+/* Code generated by ng-openapi-gen DO NOT EDIT. */
+
+export interface CarRequest {
+  description: string;
+  id?: number;
+  name: string;
+  year?: number;
+}
