# ui_app/src/app/services/models/car-response.ts
@@ -1,0 +1,10 @@
+/* tslint:disable */
+/* eslint-disable */
+/* Code generated by ng-openapi-gen DO NOT EDIT. */
+
+export interface CarResponse {
+  car?: string;
+  description?: string;
+  ownerFullName?: string;
+  prodYear?: number;
+}
